# rejoice-slim-v2

./: .gitignore  .pre-commit-config.yaml  .test-requirements-check.sh  CHANGELOG.md  CLAUDE.md  LICENSE  README 2.md  README.md  SETUP_COMPLETE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.cursor/rules/start/: RULE.md
.github/workflows/: .gitkeep  test.yml
docs/: BACKLOG 2.md  BACKLOG.md  CommitChanges.md  DEVELOPMENT.md  Dev Prompt.md  Dev Workflow Prompts.md  Dev Workflow Quick Reference.md  NUDGE PROMPTS.MD  PO Prompt.md  REWRITE_PLAN.md  UserSnippets.md  VISION.md  backlog.json  library_links.md  prompt.md
docs/stories/: EXAMPLE-plan.md  README.md
scripts/: install.sh  uninstall 2.sh  uninstall.sh  verify_setup.sh
src/rejoice/: __init__.py  __main__.py  exceptions.py  setup.py
src/rejoice/ai/: __init__.py  client.py
src/rejoice/audio/: __init__.py  archive.py
src/rejoice/cli/: __init__.py  commands.py  config_commands.py
src/rejoice/core/: __init__.py  config.py  logging.py
src/rejoice/transcript/: __init__.py  manager.py
src/rejoice/transcription/: __init__ 2.py  __init__.py  realtime.py
tests/: __init__.py  conftest.py
tests/e2e/: test_audio_archiving_e2e.py  test_sample.py
tests/integration/: test_audio_archiving_integration.py  test_filename_migration_integration.py  test_install_script.py  test_sample.py  test_uninstall_script.py
tests/unit/: test_audio.py  test_audio_archive.py  test_cli 2.py  test_cli.py  test_cli_framework.py  test_config.py  test_config_commands.py  test_exceptions.py  test_first_run_setup.py  test_logging.py  test_main.py  test_migration.py  test_ollama_client.py  test_realtime_transcription.py  test_transcript_manager.py  test_transcription 2.py  test_transcription.py
